# adrianhredhe.com

./: .env.example  .gitignore  README.md  compose.yaml  dockerfile  pyproject.toml  requirements.txt  server.dockerfile
app/: main.py
app/config/: themes.py
app/models/: dataclasses.py
app/routers/: api.py  blog.py  services.py
app/services/: plantstatus.py
app/static/: logo.txt  style.css
app/templates/: base.html  blog.md  docker.md  getting_started_with_the_pi.md  home.md  services.md  simpe_with_code.md
app/templates/archive/: getting_started_with_the_pi.md  git-ignore-index.md
app/templates/blogposts/: dotfiles_what_why_and_how.md  first_blog_post.md
app/templates/partials/: logo.html
app/templates/services/: plantstatus.md
app/utils/: html_components.py  render_markdown.py
caddy/: Caddyfile
scripts/: deploy-if-changed.sh  deploy.sh
