[project]
name = "adrianhredhe-com"
version = "0.1.0"
description = "A FastAPI and Markdown based blog + project showcase"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.113.0,<0.114.0",
    "jinja2==3.1.4",
    "markdown==3.4.1",
    "pydantic>=2.7.0,<3.0.0",
]
